# AdaptiveGoalManagement

./: .gitignore  README.md
documentation/: .~lock.path_building_v1.ods#  API_Documentation.md  Adaptive Goal Management-Overview.pptx  ROS_Web_Control.md  Stellar_Payments.md  path_building_v1.ods
examples/mir_robot/: README.md
examples/mir_robot/mir_agm/: CMakeLists.txt  package.xml
examples/mir_robot/mir_agm/launch/: mir_agm.launch  mir_agm_hospital.launch  mir_agm_manufacturing.launch
examples/mir_robot/mir_agm/maps/: hospital_map.yaml  hospital_v2.yaml  hospital_v3.yaml  sme_manufacturing_map.yaml
examples/mir_robot/mir_agm/src/: agm_worker_node.cpp  simple_navigation_goals.cpp  web_comm_server_node.cpp
examples/mir_robot/mir_agm/srv/: WebComm.srv
examples/mir_robot/mir_agm/worlds/: hospital-modified.world  sme-manufacturing.world
examples/mir_robot/mir_agm/worlds/Models/walls_manufacturing/: model.config
examples/mir_robot/mir_gazebo/launch/: mir_empty_world.launch
examples/mir_robot/mir_navigation/config/: costmap_local_params.yaml  teb_local_planner_params.yaml
examples/mir_robot/mir_navigation/launch/: start_planner.launch
examples/mycobot_ros/: README.md
examples/mycobot_ros/mycobot_280/: CMakeLists.txt
examples/mycobot_ros/mycobot_280/launch/: gripper.launch  mycobot.launch  mycobot_with_suction_gripper.launch  simple_gui.launch  teleop_keyboard.launch
examples/mycobot_ros/mycobot_280/scripts/: follow_display.py  gripper_topic.py  gripper_topic_pub.py  listen_real.py  listen_real_of_topic.py  (+3 more)
examples/turtlebot_factory/: Dockerfile
(+14 files in other folders)
